clang/test/BSC/Negative/OwnedStruct/destructor/unique_destructor1.cbs
// RUN: %clang_cc1 -verify %s

owned struct A {    
  ~A(A this) { 
  }
  ~A() { // expected-error {{the parameter of destructor must be 'A this'}}
  }
};

owned struct B<T> {    
  ~B(B<T> this) { 
  }
  ~B() { // expected-error {{the parameter of destructor must be 'B<T> this'}}
  }
};

int main() {
    return 0;
}